--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "firebase": "^10.13.2",
     "flowbite-react": "^0.10.1",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
