--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "flowbite-react": "^0.10.1",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-persist": "^1.0.2",
